--- a/signup.html
+++ b/signup.html
@@ -6,30 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo App</title>
-  <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
-  <meta name="description" content="Digital House CTD | Proyecto integrador | FRONTEND II"/>
+  <link rel="icon" type="image/x-icon" href="./assets/logo-f4v.png">
+  <meta name="description" content="To-Do app by Fabricio Turrina"/>
 
 
   <!-- ---------------- estilos compartidos de login y signup ---------------- -->
   <link rel="stylesheet" href="./css/loginSignupStyles.css">
 
-
-  <!-- ---------------------- logica aplicada en register -------------------- -->
-  <script src="./scripts/utils.js"></script>
-  <script src="./scripts/signup.js"></script>
-
+  
 </head>
 
 <body>
   <header class="container">
     <nav>
-<<<<<<< HEAD
-      <h1>To-Do App | <span>Make more and better</span></h1>
-      <img src="./assets/logo-f4v.png" alt="logo FA4">
-=======
-      <h1>To-Do App | <span>Registre sus tareas</span></h1>
+      <h1>To-Do App | <span>Make more easy</span></h1>
       <img src="./assets/logo-f4v.png" alt="logo F4V">
->>>>>>> f4acb484f1c0d315e109c9355b09a437d6bb9e09
     </nav>
   </header>
 
@@ -62,7 +53,9 @@
       <a href="index.html">¿Ya tienes una cuenta? Ingrese aquí</a>
     </div>
   </div>
-
+<!-- ---------------------- logica aplicada en register -------------------- -->
+  <script src="./scripts/utils.js"></script>
+  <script src="./scripts/signup.js"></script>
 </body>
 
 </html>
