--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo App</title>
-  <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
-  <meta name="description" content="Digital House CTD | Proyecto integrador | FRONTEND II"/>
+  <link rel="icon" type="image/x-icon" href="./assets/logo-f4v.png">
+  <meta name="description" content="To-Do app by Fabricio Turrina"/>
 
 
   <!-- ---------------- estilos compartidos de login y signup ---------------- -->
